# privileged_helper_tool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/authenticating/: Cargo.toml  com.example.authenticating.plist  requirements.txt
examples/authenticating/src/: main.rs
examples/basic/: Cargo.toml  com.example.basic.plist
examples/basic/src/: main.rs
examples/client/src/: main.rs
privileged_helper_tool/: Cargo.toml  Makefile.toml
privileged_helper_tool/src/: authenticator.rs  launchd.rs  lib.rs
